2006-09-03 21:21:26  Sean Middleditch <elanthis@awesomeplay.com>

  * Implemented a new tab-delimated file format parser.
  * Changed socials to use a tab-delimated file format.

2006-09-02 22:34:38  Sean Middleditch <elanthis@awesomeplay.com>

  * Minor but incompatible changes to the file object format.
  * Most attributes stored in file object format are now keyed.
  * Player loading is not quite right yet, due to traits and skills
    being invalid IDs.

2006-09-02 20:34:45  Sean Middleditch <elanthis@awesomeplay.com>

  * Added File::Object type to remove need for reader loops.

2006-08-19 07:30:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove the debugging printout in event.cc.

2006-07-17 01:43:44  Sean Middleditch <elanthis@awesomeplay.com>

  * Re-enable the attack_hit action on weapons during combat.

2006-07-16 12:49:25  Sean Middleditch <elanthis@awesomeplay.com>

  * Replace all uses of print and printf methods in scripts with
    streams.
  * Added @ignore stream.
  * Added documentation for streamops.

2006-07-15 13:50:38  Sean Middleditch <elanthis@awesomeplay.com>

  * Added @indent stream operator.
  * Improved @name stream operator.
  * Updated player.sx to use streams everywhere.

2006-07-15 13:42:19  Sean Middleditch <elanthis@awesomeplay.com>

  * Added Scriptix stream operator support.
  * Removed the boolean return on IStreamSink::end(), we no longer
    need to delete those automatically; we have a GC, after all.

2006-07-14 20:12:14  Sean Middleditch <elanthis@awesomeplay.com>

  * Make new character's HP set to the max.
  * Allow saving and loading of customized names on Objects.
  * Waffle on Scriptix string concat operator yet again; it's back
    to .. now.
  * Fixed a bug in Scriptix eval loop that would cause it continue
    evaluating a function even after an error.
  * Added a new stream operator << to Scriptix and basic stream
    support for Character and Room.  Added one example line of
    this in player.sx.